--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -1,6 +1,6 @@
 Configure,Configure
 Collapse,Collapse
-"Continue to E-ComProcessing","Continue to E-ComProcessing"
+"Continue to E-Comprocessing","Continue to E-Comprocessing"
 "You will be redirected to our partner's website, where you can safely pay with your credit card.","You will be redirected to our partner's website, where you can safely pay with your credit card."
 "Your payment is complete","Your payment is complete"
 "You have successfully canceled your order","You have successfully canceled your order"
